% subscript and superscript
\newcommand{\s}{\ifelse{latex}{\eqn{_{#1}}}{\ifelse{html}{\out{<sub>#1</sub>}}{#1}}}
\newcommand{\S}{\ifelse{latex}{\eqn{^{#1}}}{\ifelse{html}{\out{<sup>#1</sup>}}{^#1}}}
% links to vignettes 20220723
\newcommand{\viglink}{\ifelse{html}{\out{<a href="../CHNOSZ/doc/#1.html"><strong>#1.Rmd</strong></a>}}{\bold{#1.Rmd}}}

\section{Changes in CHNOSZ version 1.9.9-34 (2022-09-19)}{

  \subsection{MAJOR USER-VISIBLE CHANGES}{
    \itemize{

      \item A \code{model} column has been added to the OBIGT thermodynamic
      database. This specifies the model for calculating standard thermodynamic
      properties and supersedes the heuristics for determining the model to use
      based on values in other columns. Currently used models are \samp{H2O}
      (water), \samp{HKF} (Helgeson-Kirkham-Flowers), \samp{CGL} (general heat
      capacity equation for crystalline, gas, and liquid species),
      \samp{Berman} (Berman equations), \samp{AD} (Akinfiev-Diamond), and
      \samp{DEW} (Deep-Earth Water model). All OBIGT data files that can be
      read using \code{add.OBIGT()} must have this column; there is no
      back-compatibility support for data files in the older format.

      \item Units of Joules instead of calories are now used by default for the
      thermodynamic properties output by \code{subcrt()}. That is,
      \code{E.units("J")} is the default setting. User scripts that implicitly
      depend on the previous default setting of \code{E.units("cal")} may need
      to be modified to produce expected output.

    }
  }

  \subsection{OBIGT DATABASE}{
    \itemize{

      \item Move aqueous CH\s{4} back to \file{organic_aq.csv} and move gaseous
      CH\s{4} from \file{inorganic_gas.csv} to \file{organic_gas.csv}.
      
      \item Modify \code{OBIGT(no.organics = TRUE)} to prune the database of
      organic compounds \emph{except} CH\s{4}. The ability to remove hundreds