@@ -1,21 +1,21 @@
-name,abbrv,formula,state,ref1,ref2,date,model,G,H,S,Cp,V,a1.a,a2.b,a3.c,a4.d,c1.e,c2.f,omega.lambda,z.T
-almandine,Alm,Si3Fe3Al2O12,cr,BA96.1,NA,03.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-anthophyllite,Ath,Mg7Si8O24H2,cr,BA96.1,NA,01.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-cordierite,Cd,Mg2Al4Si5O18,cr,Ber88,BA96.2,01.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-enstatite,En,MgSiO3,cr,Ber88,BA96.2,01.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-fayalite,Fa,Fe2SiO4,cr,BA96.1,NA,01.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-ferrosilite,Fsl,SiFeO3,cr,BA96.1,NA,01.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-forsterite,Fo,Mg2SiO4,cr,Ber88,BA96.3,01.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-hematite,Hm,Fe2O3,cr,Ber88,BA96.2,01.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-ilmenite,Ilm,FeTiO3,cr,Ber88,BA96.4,03.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-magnetite,Mt,Fe3O4,cr,Ber88,BA96.2,01.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-pyrope,Py,Mg3Al2Si3O12,cr,Ber88,BA96.3,01.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-rutile,Rt,TiO2,cr,Ber88,BA96.2,01.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-spinel,Sp,MgAl2O4,cr,Ber88,BA96.3,01.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-talc,Tc,Mg3Si4O12H2,cr,Ber88,BA96.4,01.Oct.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-Fe-cordierite,fCd,Fe2Al4Si5O18,cr,BA96,NA,12.Dec.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-geikelite,Gk,MgTiO3,cr,BA96,NA,12.Dec.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-hercynite,Hc,FeAl2O4,cr,BA96,NA,12.Dec.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-iron-a,aFe,Fe,cr,BA96,NA,12.Dec.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-iron-g,gFe,Fe,cr,BA96,NA,12.Dec.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
-orthocorundum,Ok,Al2O3,cr,BA96,NA,12.Dec.17,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+name,abbrv,formula,state,ref1,ref2,date,E_units,model,G,H,S,Cp,V,a1.a,a2.b,a3.c,a4.d,c1.e,c2.f,omega.lambda,z.T
+almandine,Alm,Si3Fe3Al2O12,cr,BA96.1,NA,03.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+anthophyllite,Ath,Mg7Si8O24H2,cr,BA96.1,NA,01.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+cordierite,Cd,Mg2Al4Si5O18,cr,Ber88,BA96.2,01.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+enstatite,En,MgSiO3,cr,Ber88,BA96.2,01.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+fayalite,Fa,Fe2SiO4,cr,BA96.1,NA,01.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+ferrosilite,Fsl,SiFeO3,cr,BA96.1,NA,01.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+forsterite,Fo,Mg2SiO4,cr,Ber88,BA96.3,01.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+hematite,Hm,Fe2O3,cr,Ber88,BA96.2,01.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+ilmenite,Ilm,FeTiO3,cr,Ber88,BA96.4,03.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+magnetite,Mt,Fe3O4,cr,Ber88,BA96.2,01.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+pyrope,Py,Mg3Al2Si3O12,cr,Ber88,BA96.3,01.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+rutile,Rt,TiO2,cr,Ber88,BA96.2,01.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+spinel,Sp,MgAl2O4,cr,Ber88,BA96.3,01.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+talc,Tc,Mg3Si4O12H2,cr,Ber88,BA96.4,01.Oct.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+Fe-cordierite,fCd,Fe2Al4Si5O18,cr,BA96,NA,12.Dec.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+geikelite,Gk,MgTiO3,cr,BA96,NA,12.Dec.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+hercynite,Hc,FeAl2O4,cr,BA96,NA,12.Dec.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+iron-a,aFe,Fe,cr,BA96,NA,12.Dec.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+iron-g,gFe,Fe,cr,BA96,NA,12.Dec.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
+orthocorundum,Ok,Al2O3,cr,BA96,NA,12.Dec.17,J,Berman,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA
