@@ -1,5 +1,5 @@
-name,abbrv,formula,state,ref1,ref2,date,model,G,H,S,Cp,V,a1.a,a2.b,a3.c,a4.d,c1.e,c2.f,omega.lambda,z.T
-CdCl+,NA,CdCl+,aq,BZA10,NA,2010-07-03,HKF,-52629,NA,7.06,11.12,2.2,2.2303,-2.3357,6.6681,-2.6824,16.6723,-0.7693,0.4372,1
-CdCl2,NA,CdCl2,aq,BZA10,NA,2010-07-03,HKF,-84883,NA,25.72,116.01,42.21,7.5221,10.5852,1.5895,-3.2166,73.7023,20.5956,-0.0495,0
-CdCl3-,NA,CdCl3-,aq,BZA10,NA,2010-07-03,HKF,-115399,NA,45.15,97.78,63.47,10.8045,18.5994,-1.5605,-3.5479,72.0244,16.8832,0.9378,-1
-CdCl4-2,NA,CdCl4-2,aq,BZA10,NA,2010-07-03,HKF,-145583,NA,50.61,42.52,81.35,13.8329,25.9938,-4.4669,-3.8536,53.6766,5.6267,2.4766,-2
+name,abbrv,formula,state,ref1,ref2,date,model,E_units,G,H,S,Cp,V,a1.a,a2.b,a3.c,a4.d,c1.e,c2.f,omega.lambda,z.T
+CdCl+,NA,CdCl+,aq,BZA10,NA,2010-07-03,HKF,cal,-52629,NA,7.06,11.12,2.2,2.2303,-2.3357,6.6681,-2.6824,16.6723,-0.7693,0.4372,1
+CdCl2,NA,CdCl2,aq,BZA10,NA,2010-07-03,HKF,cal,-84883,NA,25.72,116.01,42.21,7.5221,10.5852,1.5895,-3.2166,73.7023,20.5956,-0.0495,0
+CdCl3-,NA,CdCl3-,aq,BZA10,NA,2010-07-03,HKF,cal,-115399,NA,45.15,97.78,63.47,10.8045,18.5994,-1.5605,-3.5479,72.0244,16.8832,0.9378,-1
+CdCl4-2,NA,CdCl4-2,aq,BZA10,NA,2010-07-03,HKF,cal,-145583,NA,50.61,42.52,81.35,13.8329,25.9938,-4.4669,-3.8536,53.6766,5.6267,2.4766,-2
